# hosting-helper-tools

./: .gitignore  Cargo.lock.bk  Cargo.toml  README.md  sample.env  settings.toml.bk
hostingjs-api/: Cargo.toml
hostingjs-api/src/: main.rs
hostingjs-api/src/actix_api/: api.rs  middleware.rs  mod.rs  obj_req.rs  obj_response.rs
hostingjs-api/src/actix_api/actions/: git_update.rs  hosting.rs  log_action.rs  mod.rs
libcloudflare-wrapper/: Cargo.toml  README.md
libcloudflare-wrapper/src/: lib.rs
libcloudflare-wrapper/src/cloudflare_datatype/: mod.rs  records.rs  zones.rs
libcloudflare-wrapper/src/cloudflare_datatype/objresponse_impl/: data_val.rs  default.rs  del_ops.rs  get_ops.rs  mod.rs  post_ops.rs  put_ops.rs
libcloudflare-wrapper/src/dbtools/: mod.rs  read_ops.rs  write_ops.rs
libcloudflare-wrapper/src/filtered_datatype/: mod.rs  zones.rs
libdatabase/: Cargo.toml  README.md
libdatabase/src/: lib.rs
libdeploy-wrapper/: Cargo.toml
libdeploy-wrapper/src/: lib.rs
libdeploy-wrapper/src/dbtools/: mod.rs
libdeploy-wrapper/src/fstools/: mod.rs
libnginx-wrapper/: Cargo.toml  README.md
libnginx-wrapper/src/: lib.rs
libnginx-wrapper/src/dbtools/: crud.rs  migration.rs  mod.rs
libnginx-wrapper/src/fstools/: mod.rs  read_ops.rs  write_ops.rs
libnginx-wrapper/src/http_server/: mod.rs  nginx_features.rs  nginx_obj.rs  nginx_ops.rs  target_site.rs
libnginx-wrapper/src/templates/: http_server.rs  mod.rs  nginx_conf.rs  systemd_file.rs
nginx-api/: Cargo.toml  README.md
nginx-api/src/: api.rs  main.rs
nginx-api/src/actix_api/: api.rs  mod.rs  obj_error.rs  obj_req.rs  obj_response.rs  querystring.rs
nginx-cli/: Cargo.toml  README.md
nginx-cli/src/: main.rs
nginx-cli/src/add_subcmd/: cloudflare_arg.rs  dname_target_arg.rs  filehost_arg.rs  mod.rs  negate_arg.rs  proxy_arg.rs  redir_arg.rs  spa_arg.rs
nginx-cli/src/del_subcmd/: mod.rs
nginx-cli/src/force_subcmd/: cert_arg.rs  migration_arg.rs  mod.rs
nginx-cli/src/list_subcmd/: all_arg.rs  filehost_arg.rs  mod.rs  one_arg.rs  proxy_arg.rs  redir_arg.rs  spa_arg.rs
nginx-cli/src/matcher/: match_add.rs  match_del.rs  match_force.rs  match_list.rs  match_update.rs  mod.rs
nginx-cli/src/print_subcmd/: filehost_arg.rs  mod.rs  proxy_arg.rs  redir_arg.rs
nginx-cli/src/update_cmd/: dname_target_arg.rs  mod.rs  negate_arg.rs
nginx-helper/: Cargo.toml
