[workspace]
members=[
    "libnginx-wrapper", "nginx-cli", "nginx-api", "libcloudflare-wrapper", "libdatabase", "libdeploy-wrapper", "hostingjs-api"
]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'unwind'
incremental = true
codegen-units = 1
rpath = false
