[package]
name = "libcloudflare-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
reqwest = { version = "*", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
tldextract = "*"

libdatabase = { path = "../libdatabase" }
