[package]
name = "libdatabase"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
rusqlite = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"

#libnginx-wrapper = { path = "../libnginx-wrapper" }