[package]
name = "libdeploy-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
dotenv = "*"
git2 = "*"
rand = "*"

libnginx-wrapper = { path = "../libnginx-wrapper" }
libcloudflare-wrapper = { path = "../libcloudflare-wrapper" }
libdatabase = { path = "../libdatabase" }