[package]
name = "libnginx-wrapper"
version = "1.0.0"
edition = "2021"
authors = ["isaacjacksonreay@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
url = "*"