[package]
name = "nginx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "*"
actix-web = "*"
config = "*"
actix-jwt-auth-middleware = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
jwt-compact = { version = "*", features = ["ed25519-compact"] }
ed25519-compact = "*"
time = "*"

libnginx-wrapper = { path = "../libnginx-wrapper" }
