[package]
name = "nginx-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "*"
actix-web = "*"
actix-web-lab = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
dotenv = "*"
lazy_static = "*"
tokio = { version = "*", features = ["full"] }

libnginx-wrapper = { path = "../libnginx-wrapper" }
libdatabase = { path = "../libdatabase" }
