[package]
name = "nginx-cli"
version = "1.0.0"
edition = "2021"
description = "Nginx Helper Tools"
authors = ["IsaacJReay <isaacjacksonreay@gmail.com>", "KOOMPI Development Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
prettytable = "*"

libnginx-wrapper = { path = "../libnginx-wrapper" }